Update remote controller test app.

--- a/x360ce.RemoteController/App.config
+++ b/x360ce.RemoteController/App.config
@@ -1,6 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="JocysCom.x360ce.RemoteController.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <JocysCom.x360ce.RemoteController.Properties.Settings>
+            <setting name="ComputerHost" serializeAs="String">
+                <value>127.0.0.1</value>
+            </setting>
+            <setting name="ComputerPort" serializeAs="String">
+                <value>26010</value>
+            </setting>
+            <setting name="LoginUsername" serializeAs="String">
+                <value>Guest 1</value>
+            </setting>
+            <setting name="LoginPassword" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AutoConnect" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Connect" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ControllerIndex" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </JocysCom.x360ce.RemoteController.Properties.Settings>
+    </userSettings>
 </configuration>
