Shared log helper classes updated.

--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -22,8 +22,6 @@
 		<add key="Security_RequiredFields" value="UserName,Password,Email,Terms"/>
 		<add key="Security_OptionalFields" value="FirstName,LastName"/>
 		<add key="RunMode" value="TEST"/>
-		<add key="SmtpServer" value="mail.x360ce.com"/>
-		<add key="SmtpFrom" value="info@x360ce.com"/>
 		<!-- Error Reporting -->
 		<add key="ErrorRecipients" value="info@x360ce.com"/>
 		<add key="ErrorNotifications" value="True"/>
@@ -40,6 +38,14 @@
 		<add key="TraceExtension_LogBrowserCompatible" value="false"/>
 		<add key="TraceExtension_LogFileDirectory" value="c:\ProgramData\X360CE\Logs"/>
 	</appSettings>
+	<system.net>
+		<!-- Error notifications if enabled. -->
+		<mailSettings>
+			<smtp from="noreply@x360ce.com">
+				<network host="jocys.com" enableSsl="true" />
+			</smtp>
+		</mailSettings>
+	</system.net>
 	<!-- Allow Authorization -->
 	<location path="Security/Admin">
 		<system.web>
