--- a/Mobile/RemoteController.Android/Properties/AndroidManifest.xml
+++ b/Mobile/RemoteController.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.JocysCom.x360ce.Mobile.RemoteController">
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
-    <application android:label="JocysCom.x360ce.Mobile.RemoteController.Android"></application>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="JocysCom.RemoteController" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
+	<application android:label="Jocys.com Remote Controller" android:icon="@mipmap/icon"></application>
+	<uses-permission android:name="android.permission.VIBRATE" />
 </manifest>
