--- a/Mobile/RemoteController.iOS/RemoteController.iOS.csproj
+++ b/Mobile/RemoteController.iOS/RemoteController.iOS.csproj
@@ -9,9 +9,9 @@
     <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TemplateGuid>{65C0771A-452F-423B-995C-F0AE46E643BA}</TemplateGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>JocysCom.x360ce.Mobile.RemoteController.iOS</RootNamespace>
+    <RootNamespace>JocysCom.RemoteController.iOS</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
-    <AssemblyName>JocysCom.x360ce.Mobile.RemoteController.iOS</AssemblyName>
+    <AssemblyName>JocysCom.RemoteController.iOS</AssemblyName>
     <MtouchEnableSGenConc>true</MtouchEnableSGenConc>
     <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
   </PropertyGroup>
