--- a/Mobile/RemoteController.iOS/Info.plist
+++ b/Mobile/RemoteController.iOS/Info.plist
@@ -23,15 +23,15 @@
     <key>MinimumOSVersion</key>
     <string>8.0</string>
     <key>CFBundleDisplayName</key>
-    <string>JocysCom.x360ce.Mobile.RemoteController</string>
+    <string>JocysCom.RemoteController</string>
     <key>CFBundleIdentifier</key>
-    <string>com.companyname.JocysCom.x360ce.Mobile.RemoteController</string>
+    <string>com.companyname.JocysCom.RemoteController</string>
     <key>CFBundleVersion</key>
     <string>1.0</string>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>CFBundleName</key>
-    <string>JocysCom.x360ce.Mobile.RemoteController</string>
+    <string>JocysCom.RemoteController</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
 </dict>
