--- a/Mobile/RemoteController.Android/Properties/AndroidManifest.xml
+++ b/Mobile/RemoteController.Android/Properties/AndroidManifest.xml
@@ -3,4 +3,8 @@
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
 	<application android:label="Jocys.com Remote Controller" android:icon="@mipmap/icon"></application>
 	<uses-permission android:name="android.permission.VIBRATE" />
+	<uses-permission android:name="android.permission.BLUETOOTH" />
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 </manifest>
