--- a/Mobile/RemoteController.iOS/RemoteController.iOS.csproj
+++ b/Mobile/RemoteController.iOS/RemoteController.iOS.csproj
@@ -119,9 +119,9 @@
     <BundleResource Include="Resources\tab_feed.png" />
     <BundleResource Include="Resources\tab_feed%402x.png" />
     <BundleResource Include="Resources\tab_feed%403x.png" />
-    <BundleResource Include="Resources\xamarin_logo.png" />
-    <BundleResource Include="Resources\xamarin_logo%402x.png" />
-    <BundleResource Include="Resources\xamarin_logo%403x.png" />
+    <BundleResource Include="Resources\about_logo.png" />
+    <BundleResource Include="Resources\about_logo%402x.png" />
+    <BundleResource Include="Resources\about_logo%403x.png" />
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
   </ItemGroup>
   <ItemGroup>
