--- a/Mobile/RemoteController/RemoteController.csproj
+++ b/Mobile/RemoteController/RemoteController.csproj
@@ -22,12 +22,31 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Audio\Alarm.mp3" />
+    <None Remove="Resources\Audio\Alarm.wav" />
+    <None Remove="Resources\Audio\analog-watch-alarm_daniel-simion.mp3" />
+    <None Remove="Resources\Audio\analog-watch-alarm_daniel-simion.wav" />
+    <None Remove="Resources\Audio\Beep.mp3" />
+    <None Remove="Resources\Audio\Beep.wav" />
+    <None Remove="Resources\Audio\Siren_Noise-KevanGC-1337458893.mp3" />
+    <None Remove="Resources\Audio\Siren_Noise-KevanGC-1337458893.wav" />
+    <None Remove="Resources\Audio\_Alarm.wav" />
+    <None Remove="Resources\Audio\_Beep.wav" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Include="..\..\x360ce.Engine\SharpDX.XInput\Gamepad.cs" Link="Common\Gamepad.cs" />
     <Compile Include="..\..\x360ce.Engine\SharpDX.XInput\GamepadButtonFlags.cs" Link="Common\GamepadButtonFlags.cs" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\Audio\_Alarm.wav" />
+    <EmbeddedResource Include="Resources\Audio\_Beep.wav" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="SkiaSharp" Version="1.68.0" />
+    <PackageReference Include="Xam.Plugin.SimpleAudioPlayer" Version="1.3.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.0.0.425677" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
   </ItemGroup>
