--- a/Mobile/RemoteController.Android/Properties/AndroidManifest.xml
+++ b/Mobile/RemoteController.Android/Properties/AndroidManifest.xml
@@ -5,6 +5,7 @@
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+	<!--this is necessary for Android v6+ to get the device name and address-->
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 </manifest>
