--- a/Mobile/RemoteController.iOS/Info.plist
+++ b/Mobile/RemoteController.iOS/Info.plist
@@ -34,5 +34,17 @@
     <string>JocysCom.RemoteController</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<!--for connecting to devices (client)-->
+		<string>bluetooth-central</string>
+
+		<!--for server configurations if needed-->
+		<string>bluetooth-peripheral</string>
+	</array>
+
+	<!--To add a description to the Bluetooth request message (on iOS 10 this is required!)-->
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Jocys.com Bluetooth Request</string>
 </dict>
 </plist>
