--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -157,7 +157,7 @@
 				<rule name="To www" stopProcessing="true">
 					<match url="(.*)"/>
 					<conditions logicalGrouping="MatchAll">
-						<add input="{HTTP_HOST}" pattern="^[a-z]+\.(co\.uk|lt|com|eu)$"/>
+						<add input="{HTTP_HOST}" pattern="^[a-z0-9]+\.(co\.uk|lt|com|eu)$"/>
 					</conditions>
 					<action type="Redirect" url="{MapSSL:{HTTPS}}www.{HTTP_HOST}/{R:1}" redirectType="Permanent"/>
 				</rule>
