Web security headers added.

--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -131,6 +131,7 @@
 			<!-- Enabling HTTP tracing in ASP.NET Web Services -->
 			<add name="MyHttpModule" type="JocysCom.ClassLibrary.Diagnostics.RawDataLogHttpModule,x360ce.Engine" />
 		</modules>
+		<validation validateIntegratedModeConfiguration="false"/>
 		<handlers>
 			<remove name="UrlRoutingHandler"/>
 			<!--<add name="UrlRoutingHandler" preCondition="integratedMode" verb="*" path="UrlRouting.axd" type="System.Web.Routing.UrlRoutingHandler, System.Web.Routing, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>-->
@@ -223,7 +224,32 @@
 				</rule>-->
 			</outboundRules>
 		</rewrite>
-		<validation validateIntegratedModeConfiguration="false"/>
+		<httpProtocol>
+			<!-- Test: https://www.immuniweb.com/websec -->
+			<customHeaders>
+				<remove name="X-Powered-By" />
+				<!-- SECURITY HEADERS - https://securityheaders.io/? -->
+				<!-- Protects against Clickjacking attacks. ref.: http://stackoverflow.com/a/22105445/1233379 -->
+				<add name="X-Frame-Options" value="SAMEORIGIN" />
+				<!-- Protects against Clickjacking attacks. ref.: https://www.owasp.org/index.php/HTTP_Strict_Transport_Security_Cheat_Sheet -->
+				<add name="Strict-Transport-Security" value="max-age=31536000; includeSubDomains"/>
+				<!-- Protects against XSS injections. ref.: https://www.veracode.com/blog/2014/03/guidelines-for-setting-security-headers/ -->
+				<add name="X-XSS-Protection" value="1; mode=block" />
+				<!-- Protects against MIME-type confusion attack. ref.: https://www.veracode.com/blog/2014/03/guidelines-for-setting-security-headers/ -->
+				<add name="X-Content-Type-Options" value="nosniff" />
+				<!-- CSP modern XSS directive-based defence, used since 2014. ref.: http://content-security-policy.com/ -->
+				<add name="Content-Security-Policy" value="default-src 'self'; connect-src *; font-src *; child-src *; img-src * data:; media-src *; object-src *; script-src * 'unsafe-inline' 'unsafe-eval'; style-src * 'unsafe-inline';" />
+				<!-- Prevents from leaking referrer data over insecure connections. ref.: https://scotthelme.co.uk/a-new-security-header-referrer-policy/ -->
+				<add name="Referrer-Policy" value="strict-origin" />
+				<!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Feature-Policy -->
+				<add name="Feature-Policy" value="autoplay none; camera none; encrypted-media yes; fullscreen yes; geolocation yes; microphone none; payment none;" />
+				<!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Expect-CT -->
+				<add name="Expect-CT" value="enforce; max-age=2592000; report-uri='self';" />
+			</customHeaders>
+		</httpProtocol>
+		<staticContent>
+			<clientCache cacheControlMode="NoControl" />
+		</staticContent>
 	</system.webServer>
 	<system.serviceModel>
 		<!-- Enabling Tracing in Web Services -->
