--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -228,6 +228,7 @@
 			<!-- Test: https://www.immuniweb.com/websec -->
 			<customHeaders>
 				<remove name="X-Powered-By" />
+				<remove name="X-Powered-By" />
 				<!-- SECURITY HEADERS - https://securityheaders.io/? -->
 				<!-- Protects against Clickjacking attacks. ref.: http://stackoverflow.com/a/22105445/1233379 -->
 				<add name="X-Frame-Options" value="SAMEORIGIN" />
