web headers fixed

--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -228,7 +228,6 @@
 			<!-- Test: https://www.immuniweb.com/websec -->
 			<customHeaders>
 				<remove name="X-Powered-By" />
-				<remove name="X-Powered-By" />
 				<!-- SECURITY HEADERS - https://securityheaders.io/? -->
 				<!-- Protects against Clickjacking attacks. ref.: http://stackoverflow.com/a/22105445/1233379 -->
 				<add name="X-Frame-Options" value="SAMEORIGIN" />
@@ -243,9 +242,9 @@
 				<!-- Prevents from leaking referrer data over insecure connections. ref.: https://scotthelme.co.uk/a-new-security-header-referrer-policy/ -->
 				<add name="Referrer-Policy" value="strict-origin" />
 				<!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Feature-Policy -->
-				<add name="Feature-Policy" value="autoplay none; camera none; encrypted-media yes; fullscreen yes; geolocation yes; microphone none; payment none;" />
+				<add name="Feature-Policy" value="camera 'none'; microphone 'none'; payment 'none';" />
 				<!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Expect-CT -->
-				<add name="Expect-CT" value="enforce; max-age=2592000; report-uri='self';" />
+				<add name="Expect-CT" value="enforce, max-age=2592000" />
 			</customHeaders>
 		</httpProtocol>
 		<staticContent>
