--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -6,7 +6,7 @@
 <configuration>
 	<connectionStrings>
 		<add name="JocysCom.WebSites.Engine.Properties.Settings.DefaultConnectionString" connectionString="Data Source=localhost;Initial Catalog=x360ce;User ID=x360ceAdmin;Password=localdev;" providerName="System.Data.SqlClient"/>
-		<add name="x360ceModelContainer" connectionString="metadata=res://*/Data.x360ceModel.csdl|res://*/Data.x360ceModel.ssdl|res://*/Data.x360ceModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=x360ce;persist security info=True;user id=x360ceAdmin;password=localdev;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+		<add name="x360ceModelContainer" connectionString="metadata=res://*/Data.x360ceModel.csdl|res://*/Data.x360ceModel.ssdl|res://*/Data.x360ceModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=x360ce;persist security info=True;user id=x360ceAdmin;password=localdev;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
 		<add name="SecurityEntities" connectionString="metadata=res://*/JocysCom.Security.Data.SecurityModel.csdl|res://*/JocysCom.Security.Data.SecurityModel.ssdl|res://*/JocysCom.Security.Data.SecurityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=x360ce;persist security info=True;user id=x360ceAdmin;password=localdev;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
 	</connectionStrings>
 	<appSettings>
