--- a/x360ce.App.Beta/x360ce.App.Beta.csproj
+++ b/x360ce.App.Beta/x360ce.App.Beta.csproj
@@ -348,12 +348,6 @@
       <DependentUpon>LoadingCircle.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\LoadingCircleToolStripMenuItem.cs" />
-    <Compile Include="Forms\MessageBoxForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\MessageBoxForm.Designer.cs">
-      <DependentUpon>MessageBoxForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\NewDeviceForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -413,6 +407,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\SettingsMapItem.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Service\RemoteService.cs" />
     <Compile Include="ViGEm\Client\Enums\VIGEM_TARGET_TYPE.cs" />
     <Compile Include="ViGEm\Client\Enums\XUSB_REPORT.cs" />
@@ -490,9 +489,6 @@
     <EmbeddedResource Include="Controls\AxisMapUserControl.resx">
       <DependentUpon>AxisMapUserControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\MessageBoxForm.resx">
-      <DependentUpon>MessageBoxForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms\NewDeviceForm.resx">
       <DependentUpon>NewDeviceForm.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -538,11 +534,6 @@
     </None>
     <EmbeddedResource Include="Images\xboxControllerFront.png" />
     <EmbeddedResource Include="Images\xboxControllerTop.png" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -623,6 +614,7 @@
     <Content Include="Forms\MessageBoxFormImages\MessageBoxIcon_Question_32x32.png" />
     <Content Include="Forms\MessageBoxFormImages\MessageBoxIcon_Warning.ico" />
     <Content Include="Forms\MessageBoxFormImages\MessageBoxIcon_Warning_32x32.png" />
+    <None Include="Resources\Icons\ok.wmf" />
     <EmbeddedResource Include="Resources\ViGEmClient\x64\ViGEmClient.dll" />
     <EmbeddedResource Include="Resources\ViGEmClient\x86\ViGEmClient.dll" />
     <EmbeddedResource Include="Resources\SharpDX\SharpDX.RawInput.dll" />
@@ -630,6 +622,7 @@
     <None Include="Images\add_16x16.png" />
     <EmbeddedResource Include="Documents\License.txt" />
     <None Include="Images\app_16x16.png" />
+    <None Include="Images\add.emf" />
     <Content Include="Images\app_48x48.png" />
     <EmbeddedResource Include="Resources\SharpDX\SharpDX.DirectInput.dll" />
     <EmbeddedResource Include="Resources\SharpDX\SharpDX.dll" />
@@ -693,6 +686,17 @@
     <None Include="Images\test_16x16.png" />
     <None Include="Images\save_ok_16x16.png" />
     <None Include="Images\save_warning_16x16.png" />
+    <None Include="Images\close.emf" />
+    <None Include="Images\cloud_download.emf" />
+    <None Include="Images\cloud_upload.emf" />
+    <None Include="Images\delete.emf" />
+    <Content Include="Images\ok.emf" />
+    <None Include="Images\refresh.emf" />
+    <None Include="Images\remove.emf" />
+    <None Include="Images\save.emf" />
+    <None Include="Images\switch_off.emf" />
+    <None Include="Images\switch_on.emf" />
+    <None Include="Images\test.emf" />
     <Content Include="Images\tip_24x24.png" />
     <None Include="Images\update_16x16.png" />
     <Content Include="Presets\ReadMe.txt" />
