--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -232,6 +232,12 @@
     <Compile Include="JocysCom\Controls\IssuesControl\IssuesUserControl.Designer.cs">
       <DependentUpon>IssuesUserControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="JocysCom\Controls\MessageBoxForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="JocysCom\Controls\MessageBoxForm.Designer.cs">
+      <DependentUpon>MessageBoxForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="JocysCom\Controls\ToolStripBorderlessRenderer.cs" />
     <Compile Include="JocysCom\Data\SqlHelper.cs" />
     <Compile Include="JocysCom\Data\TlvSerializer.cs" />
@@ -492,6 +498,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="JocysCom\Controls\IssuesControl\IssuesUserControl.resx">
       <DependentUpon>IssuesUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="JocysCom\Controls\MessageBoxForm.resx">
+      <DependentUpon>MessageBoxForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="JocysCom\IO\HardwareControl.resx">
       <DependentUpon>HardwareControl.cs</DependentUpon>
